fixed height of Counter so that colors are selectable on mobile

--- a/ProfessionalWebsite/Client/Pages/Counter.razor.css
+++ b/ProfessionalWebsite/Client/Pages/Counter.razor.css
@@ -1,5 +1,5 @@
 ﻿.page-container {
-    height: 100%;
+    height: 95%;
     width: 100%;
     display: flex;
     flex-direction: column;
